manifests/netbird/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    name: netbird
---
