manifests/netbird/03-netbird-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird
  namespace: netbird
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: netbird-client
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
