manifests/netbird/12-coturn-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn-lb
  namespace: netbird
  labels:
    app.kubernetes.io/name: coturn
    app.kubernetes.io/component: turn
  annotations:
    metallb.universe.tf/address-pool: first-pool
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.200.17
  selector:
    app.kubernetes.io/name: coturn
  ports:
    - name: turn-udp
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: turn-tcp
      port: 3478
      targetPort: 3478
      protocol: TCP
    - name: turn-tls
      port: 5349
      targetPort: 5349
      protocol: TCP
---
