manifests/netbird/12-netbird-management-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-management
  namespace: netbird
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-management
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 33073
      targetPort: grpc
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-management
